@@ -175,6 +175,7 @@ void receiveIPC(tcb_t *thread, cap_t cap, bool_t isBlocking)
                 thread_state_ptr_set_replyObject(&thread->tcbState, REPLY_REF(replyPtr));
                 if (replyPtr) {
                     replyPtr->replyTCB = thread;
+                    replyPtr->canGrant = cap_endpoint_cap_get_capCanGrant(cap);
                 }
 #else
                 thread_state_ptr_set_blockingIPCCanGrant(
@@ -248,6 +249,7 @@ void receiveIPC(tcb_t *thread, cap_t cap, bool_t isBlocking)
                 if ((canGrant || canGrantReply) && replyPtr != NULL) {
                     bool_t canDonate = sender->tcbSchedContext != NULL
                                        && seL4_Fault_get_seL4_FaultType(sender->tcbFault) != seL4_Fault_Timeout;
+                    replyPtr->canGrant = cap_endpoint_cap_get_capCanGrant(cap);
                     reply_push(sender, thread, replyPtr, canDonate);
                 } else {
                     setThreadState(sender, ThreadState_Inactive);
